feat: fetch user by id
