# internal/api/controllers/controller.go
@@ -2,6 +2,7 @@ package controllers
 
 import (
 	"backend-service/internal/application/usecase"
+	"backend-service/pkg/utilities/middlewares"
 
 	"github.com/labstack/echo/v4"
 )
@@ -19,7 +20,8 @@ func InitController(e *echo.Echo, usecase *usecase.Usecase) {
 	apiV1.POST("/users/login", controller.AuthenticateUser)
 
 	// Protected user routes (JWT required)
-	// usersGroup := apiV1.Group("/users")
-	// usersGroup.Use(middlewares.JWTAuth())
+	usersGroup := apiV1.Group("/users")
+	usersGroup.Use(middlewares.JWTAuth())
+	usersGroup.GET("/:id", controller.GetUserByID)
 	// usersGroup.GET("/me", controller.GetCurrentUser)
 }
